add new method to extract sensitive information.